# hermes-progress-tail

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  RELEASE_NOTES.md  __init__.py  install.sh  plugin.yaml  pyproject.toml  pytest.ini  uninstall.sh
.github/workflows/: ci.yml
.superpowers/sdd/: task-D1-report.md
hermes_progress_tail/: __init__.py  compat.py  config.py  delegate_renderer.py  formatter.py  installer.py  monkeypatches.py  plugin.py  redaction.py  renderer.py  state.py  text_utils.py
hermes_progress_tail/cli/: cleanup.py  installer.py  installer_defaults.py  interactive.py  profiles.py
hermes_progress_tail/gateway/: compat.py
hermes_progress_tail/hooks/: agent.py  command_menus.py  compression.py  contracts.py  delegate.py  install_report.py  monkeypatches.py  platform.py  status_helpers.py  telegram.py  telegram_formatting.py
hermes_progress_tail/models/: events.py  release.py  state.py  state_compat.py  state_records.py
scripts/: check_session_context_inventory.py  check_structure.py
tests/: __init__.py  conftest.py  test_announcements_and_status.py  test_assistant_progress.py  test_b3_corrective_architecture_lifecycle.py  test_b3_corrective_report_matrix.py  test_b3_final_optional_and_lifecycle.py  test_b6_corrective_facade_ports.py  test_background_jobs_and_fencing.py  test_background_jobs_and_fencing_part2.py  test_background_review_origin.py  test_c10_baseline_compatibility.py  test_c11_baseline_compatibility.py  test_c12_structure_baseline.py  test_c12_structure_contract.py  test_c7_baseline_compatibility.py  test_c8_baseline_compatibility.py  test_c9_baseline_compatibility.py  test_command_menu_exposure.py  test_compression_lifecycle.py  test_compression_patch_edges.py  test_config.py  test_config_contract.py  test_coverage_config.py  test_d6_architecture_and_defaults.py  test_delegate_progress.py  test_delegate_readability.py  test_delegate_text_stream.py  test_delivery_adapter_edges.py  test_event_reducer.py  test_event_reducer_c4c.py  test_finalization.py  test_focused_live_markdown.py  test_focused_rendering.py  test_formatter.py  test_formatter_event_edges.py  test_gateway_compat.py  test_gateway_interrupt_monkeypatch.py  test_gateway_native_suppression.py  test_hook_contracts.py  (+77 more)
(+43 files in other folders)
