[project]
name = "hermes-progress-tail"
version = "0.2.04"
description = "Compact tool and reasoning progress tail for Hermes gateway platforms"
requires-python = ">=3.12"
dependencies = ["PyYAML>=6"]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6",
  "pre-commit>=4.3.0",
  "pytest>=8",
  "ruff>=0.15.12",
]

[project.scripts]
hermes-progress-tail = "hermes_progress_tail.installer:main"
hermes_progress_tail = "hermes_progress_tail.installer:main"

[tool.setuptools.packages.find]
include = ["hermes_progress_tail*"]
exclude = ["assets*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["hermes_progress_tail"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "E501",
  "B008",
  # Keep this compatibility-floor change behavior-neutral; modernization is separate work.
  "UP017",
  "UP042",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
